# printf

./: CMakeLists.txt  Makefile  a.out  addpre.c  addsuff.c  assoc.c  author  delete.c  float.c  floatv2.c  ft_arg_Xx.c  ft_arg_di.c  ft_arg_f.c  ft_arg_o.c  ft_assoc.c  ft_base_neg.c  ft_base_pos.c  ft_func.c  ft_itoa.c  ft_itoa_u.c  ft_kolvo_dig.c  ft_memalloc.c  ft_parse.c  ft_parse1.c  ft_print_di.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strnew.c  ft_treatment.c  func_str.c  itoa_base.c  math.c  parse.c  print_Xx.c  print_c.c  print_di.c  (+10 more)
includes/: ft_printf.h
srcs/: a.out  assoc.c  float.c  ft_arg_di.c  ft_arg_f.c  ft_arg_o.c  ft_arg_xx.c  ft_itoa_u.c  ft_printf.c  ft_printf.h  ft_strdup.c  ft_strnew.c  parse.c  print_c.c  print_f.c  print_p.c  print_perc.c  print_s.c  print_u.c  print_xx.c  treatment.c
srcs/a.out.dSYM/Contents/Resources/DWARF/: a.out
